public/skin/frontend/rwd/default/css/styles.css
/* ... */
.block-wishlist .product-details .product-name {
  padding-top: 0;
  margin-bottom: 5px;
}
.block-wishlist .price-box {
  float: left;
  margin: 0;
}
.block-wishlist .price-box,
.block-wishlist .price-box .price,
.block-wishlist .link-cart {
  font-size: 0.75rem;
}
.block-wishlist .link-cart {
  float: left;
  text-transform: uppercase;
  margin-right: 7px;
  padding-right: 7px;
  border-right: 1px solid var(--maho-color-border-light);
}

/* ============================================ *
 * Checkout - Mini cart
 * ============================================ */
.header-minicart, #cart-sidebar.mini-products-list .product-details .truncated {
  display: inline-block;
}
@media only screen and (max-width: 770px) {
  .header-minicart {
    display: block;
  }
}
.header-minicart .minicart-message {
  display: block;
  padding: 10px;
}
.header-minicart .empty {
  padding: 10px;
  text-align: center;
}
.header-minicart .minicart-wrapper {
  clear: both;
  position: relative;
}
.header-minicart .minicart-wrapper:before, .header-minicart .minicart-wrapper:after {
  content: '';
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  display: none;
}
.header-minicart .minicart-wrapper:before {
  background-color: var(--maho-color-background);
  opacity: 0.8;
  z-index: 2;
}
.header-minicart .minicart-wrapper:after {
  background-image: url("../../../base/default/images/loading.svg");
  background-repeat: no-repeat;
  background-position: center;
  z-index: 3;
}
.header-minicart .minicart-wrapper.loading {
  position: relative;
}
.header-minicart .minicart-wrapper.loading:before, .header-minicart .minicart-wrapper.loading:after {
  display: block;
}
.header-minicart .block-cart {
  display: none;
}
.header-minicart .block-subtitle {
  color: var(--maho-color-primary-hover);
  font-weight: bold;
  line-height: 1.4;
  padding: 5px;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 0px;
}
.header-minicart .block-subtitle .close {
  width: 40px;
  float: right;
  display: block;
  color: var(--maho-color-text-primary);
  text-decoration: none;
  font-weight: normal;
  font-size: 1.875rem;
  position: absolute;
  top: -8px;
  right: -3px;
}
.header-minicart .mini-products-list {
  padding: 10px;
  padding-top: 0px;
}
.header-minicart .mini-products-list li {
  padding: 8px 5px 8px 11px;
  border-bottom: 1px solid var(--maho-color-button-secondary);
  position: relative;
}
.header-minicart .mini-products-list li.last {
  border: none;
}
.header-minicart .mini-products-list li .product-details {
  position: relative;
}
.header-minicart .product-details .product-name {
  padding-top: 0px;
  font-weight: bold;
}
.header-minicart .product-details .product-name a {
  color: var(--maho-color-primary);
}
.header-minicart .info-wrapper {
  margin-bottom: 0.5em;
}
.header-minicart .info-wrapper th {
  text-transform: uppercase;
  padding-right: 10px;
}
.header-minicart .info-wrapper td {
  color: var(--maho-color-primary);
  clear: right;
}
.header-minicart .info-wrapper .qty-wrapper td {
  height: 33px;
  line-height: 33px;
}
.header-minicart .info-wrapper .qty {
  padding-left: 4px;
  padding-right: 4px;
  margin-right: 2px;
  width: 3.2em;
  text-align: center;
  height: 30px;
}
.header-minicart .info-wrapper .quantity-button {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 100ms;
}
.header-minicart .info-wrapper .quantity-button[disabled] {
  cursor: default;
}
.header-minicart .info-wrapper .quantity-button.visible {
  opacity: 1;
}
.header-minicart .subtotal {
  background-color: var(--maho-color-button-secondary);
  text-align: center;
  line-height: 2em;
}
.header-minicart .subtotal .label {
  color: var(--maho-color-background);
  text-transform: uppercase;
}
.header-minicart .subtotal .price {
  color: var(--maho-color-primary);
}
.header-minicart .minicart-actions {
  padding: 10px;
  margin-top: 0px;
  overflow: hidden;
  position: relative;
  text-align: center;
}
.header-minicart .minicart-actions .checkout-button {
  min-width: 145px;
}
.header-minicart .minicart-actions .cart-link {
  height: 33px;
  line-height: 39px;
  text-transform: uppercase;
  font-size: 0.813rem;
}
.header-minicart .minicart-actions .paypal-logo .paypal-or {
  line-height: 1.6;
}
.header-minicart #minicart-error-message {
  text-align: center;
  color: var(--maho-color-error);
  display: none;
}
.header-minicart #minicart-success-message {
  text-align: center;
  color: var(--maho-color-success);
  display: none;
}
.header-minicart .jcarousel-control-prev,
.header-minicart .jcarousel-control-next {
  display: none;
}

.header-minicart.skip-active .block-cart,
.block-cart.skip-active {
  display: block;
}

@media only screen and (min-width: 771px) {
  .checkout-types.minicart {
    float: none;
    text-align: center;
  }
}
@media only screen and (max-width: 479px) {
  .header-minicart a.skip-cart {
    z-index: 1;
  }
}
/* ... */

